Sigil v0.1.3 <ADD DATE>
    - book updates from TOC editor are now faster and have a much smaller memory overhead
    - fixed issue with removing headings from TOC in TOC editor (issue #88, part 2);
    also made TOC editor updates to headings MUCH more robust
    - all headings are now by default included in TOC... heuristics for "guessing" which
    headings the users wants have been removed (issue #88, part 1)
    - fixed critical issue with Sigil hanging when loading certain SGF files (issue #87)
    - fixed rare issue with duplicate image loading (issue #86)
    - implemented a workaround for a webkit bug causing the first character of a heading
    created after a chapter break to be displayed incorrectly (issue #78)
    - the "makedmg" target for Macs is not build by default anymore and needs to be
    invoked directly; this was done to speed rebuilds
    - Macs now have a standard multiple document interface: opening a new file opens it
    in a new window, not in the old one (issue #22)
    - fixed a bug with warning dialog not informing the user of unsaved changes
    if he tried to load from the recent files list

Sigil v0.1.2 2009.08.12.
    - added the ability to specify the main publication identifier directly,
    through the "CustomID" basic metadata property (issue #3)
    - fixed a bug with warning dialog not informing the user of unsaved changes
    when editing in code view (issue #30)
    - Sigil is now a universal Mac application (ppc and i386, in 32bit) (issue #5)
    - implemented a workaround for a bug in QTextCodec causing bad HTML codec detection (issue #74)
    - SVG elements are not removed anymore (issue #24)
    - inter-document HTML links are now fully supported (issue #53)
    - fixed rare issue where CSS style rules could get duplicated when changing views
    - fixed issue with inline style tags in OPS documents not being loaded (issue #58)
    - Sigil can now accept a file to load as the first command line argument; this also